fix(messenger): honour apiBaseUrl on the pre-SDK path